; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/qcom/extr_clk-hfpll.c_clk_hfpll_round_rate.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/qcom/extr_clk-hfpll.c_clk_hfpll_round_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.clk_hfpll = type { %struct.hfpll_data* }
%struct.hfpll_data = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clk_hw*, i64, i64*)* @clk_hfpll_round_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @clk_hfpll_round_rate(%struct.clk_hw* %0, i64 %1, i64* %2) #0 {
  %4 = alloca %struct.clk_hw*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  %7 = alloca %struct.clk_hfpll*, align 8
  %8 = alloca %struct.hfpll_data*, align 8
  %9 = alloca i64, align 8
  store %struct.clk_hw* %0, %struct.clk_hw** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64* %2, i64** %6, align 8
  %10 = load %struct.clk_hw*, %struct.clk_hw** %4, align 8
  %11 = call %struct.clk_hfpll* @to_clk_hfpll(%struct.clk_hw* %10)
  store %struct.clk_hfpll* %11, %struct.clk_hfpll** %7, align 8
  %12 = load %struct.clk_hfpll*, %struct.clk_hfpll** %7, align 8
  %13 = getelementptr inbounds %struct.clk_hfpll, %struct.clk_hfpll* %12, i32 0, i32 0
  %14 = load %struct.hfpll_data*, %struct.hfpll_data** %13, align 8
  store %struct.hfpll_data* %14, %struct.hfpll_data** %8, align 8
  %15 = load i64, i64* %5, align 8
  %16 = load %struct.hfpll_data*, %struct.hfpll_data** %8, align 8
  %17 = getelementptr inbounds %struct.hfpll_data, %struct.hfpll_data* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = load %struct.hfpll_data*, %struct.hfpll_data** %8, align 8
  %20 = getelementptr inbounds %struct.hfpll_data, %struct.hfpll_data* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = call i64 @clamp(i64 %15, i32 %18, i64 %21)
  store i64 %22, i64* %5, align 8
  %23 = load i64, i64* %5, align 8
  %24 = load i64*, i64** %6, align 8
  %25 = load i64, i64* %24, align 8
  %26 = call i64 @DIV_ROUND_UP(i64 %23, i64 %25)
  %27 = load i64*, i64** %6, align 8
  %28 = load i64, i64* %27, align 8
  %29 = mul i64 %26, %28
  store i64 %29, i64* %9, align 8
  %30 = load i64, i64* %9, align 8
  %31 = load %struct.hfpll_data*, %struct.hfpll_data** %8, align 8
  %32 = getelementptr inbounds %struct.hfpll_data, %struct.hfpll_data* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = icmp ugt i64 %30, %33
  br i1 %34, label %35, label %40

35:                                               ; preds = %3
  %36 = load i64*, i64** %6, align 8
  %37 = load i64, i64* %36, align 8
  %38 = load i64, i64* %9, align 8
  %39 = sub i64 %38, %37
  store i64 %39, i64* %9, align 8
  br label %40

40:                                               ; preds = %35, %3
  %41 = load i64, i64* %9, align 8
  ret i64 %41
}

declare dso_local %struct.clk_hfpll* @to_clk_hfpll(%struct.clk_hw*) #1

declare dso_local i64 @clamp(i64, i32, i64) #1

declare dso_local i64 @DIV_ROUND_UP(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
